# stm32-rust-template

./: .gitmodules  Cargo.toml  README.md  STM32F407VGTX_FLASH.x  crates.js  help.html  index.html  memory.x  run.sh  settings.html  src-files.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: docs.yml  rust.yml
search.index/: 004d294f4b51.js  00cef89f2207.js  00dd05e15664.js  013100ae6796.js  016939aeeb1e.js  018f23fa9924.js  01ab0e93b5c7.js  01b496c4b178.js  01dec5c60f1e.js  023a0cf9e183.js  02e9855405c6.js  0301543d3a89.js  04135c4a25a8.js  041e49043453.js  044ddbdf8fbc.js  04505df9e7f8.js  048d50ff1503.js  05028a0b37f4.js  05203ec0a9a9.js  05ffeb6967ae.js  061538fd07b7.js  0625e9ba19f7.js  06a6eab89528.js  07889024efbc.js  0832743a3fc6.js  085e58bcded2.js  093407aca277.js  09ef0504da57.js  0a1abe994b80.js  0a21fc1b3ced.js  0a70bad4e86c.js  0b220be307f6.js  0b33d50a52b9.js  0b3599e5bf7e.js  0b5e9f9fffa3.js  0c993193d433.js  0d9ccb9779ed.js  0debcc48dd8b.js  0ec76a766163.js  0f08b75041c6.js  (+348 more)
search.index/crateNames/: 6159261587b6.js
search.index/desc/: c7e3c45f67c4.js
search.index/entry/: a14dcc1abe7e.js
search.index/function/: 8c2ee1cd2641.js
search.index/generic_inverted_index/: f5b97ab75403.js
search.index/name/: 8827ec5a4360.js
search.index/normalizedName/: 63acb6fe5062.js
search.index/path/: 58bf70feb739.js
search.index/type/: a33c799fc837.js
src/: main.rs
src/apps/: blink.rs  empty.rs  interrupts.rs  mod.rs
src/arch/: mod.rs
src/bsp/: at24.rs  ds1307.rs  mod.rs  spi_flash.rs
src/driver/: mod.rs
src/mcu/: mod.rs  stm32f407.rs
src/stm32_rust_template/: main.rs.html
src/utils/: mod.rs
stm32_rust_template/: all.html  constant.HEAP_SIZE.html  fn.__cortex_m_rt_main.html  index.html  sidebar-items.js  static.ALLOCATOR.html
stm32_rust_template/apps/: fn.init_all_apps.html  fn.init_app_registry.html  fn.register_app.html  fn.run_all_loop_steps.html  index.html  sidebar-items.js  static.APPS.html  trait.App.html
stm32_rust_template/arch/: index.html  sidebar-items.js
stm32_rust_template/bsp/: index.html  sidebar-items.js
stm32_rust_template/components/: index.html
stm32_rust_template/driver/: index.html  (+1 more)
tests/: mod.rs
(+2935 files in other folders)
