[workspace]
members = [
    "src/components/data",
    "src/components/libiot",
]
resolver = "2"

[package]
name = "stm32-rust-template"
version = "0.1.0"
edition = "2024"
description = "A template for starting bare-metal Rust projects on STM32 microcontrollers."
authors = ["Shishir Dey <r0qck3ntp@mozmail.com>"]
license = "MIT"
repository = "https://github.com/shishir-dey/stm32-rust-template"
homepage = "https://shishir-dey.github.io/stm32-rust-template"
documentation = "https://shishir-dey.github.io/stm32-rust-template"
readme = "README.md"
keywords = ["stm32", "embedded", "rust", "bare-metal", "template", "cortex-m"]
categories = ["embedded", "no-std", "templates"]

[dependencies]
cortex-m-rt = { version = "0.7.5"}
panic-halt = "*"
cortex-m = "0.7.7"
bitflags = "2.9.4"
alloc-cortex-m = "0.4.4"
data = { path = "src/components/data" }
libiot = { path = "src/components/libiot" }
log = { version = "0.4.20", optional = true }
defmt = { version = "1", optional = true }
rtt-target = { version="0.6.1", optional= true }

[dev-dependencies]
embedded-test = { version = "0.6.2" }

[features]
default = ["log", "stm32f407"]
log = ["dep:log", "dep:rtt-target", "rtt-target/log", "embedded-test/log"]
defmt = ["dep:defmt", "dep:rtt-target", "rtt-target/defmt", "embedded-test/defmt"]

# MCU-specific features for conditional compilation
stm32f407 = []
stm32f103 = []
stm32f401 = []
stm32f411 = []
stm32g030 = []

[[test]]
name = "mod"
harness = false
